GetCustomerByTelephone
