# backend/customer/api/customer/customer_grpc.pb.go
@@ -20,6 +20,7 @@ const _ = grpc.SupportPackageIsVersion7
 
 const (
 	Customer_GetVerifyCode_FullMethodName = "/api.customer.Customer/GetVerifyCode"
+	Customer_Login_FullMethodName         = "/api.customer.Customer/Login"
 )
 
 // CustomerClient is the client API for Customer service.
@@ -28,6 +29,8 @@ const (
 type CustomerClient interface {
 	// 获取验证码
 	GetVerifyCode(ctx context.Context, in *GetVerifyCodeReq, opts ...grpc.CallOption) (*GetVerifyCodeResp, error)
+	// 登录
+	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginResp, error)
 }
 
 type customerClient struct {
@@ -47,12 +50,23 @@ func (c *customerClient) GetVerifyCode(ctx context.Context, in *GetVerifyCodeReq
 	return out, nil
 }
 
+func (c *customerClient) Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginResp, error) {
+	out := new(LoginResp)
+	err := c.cc.Invoke(ctx, Customer_Login_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CustomerServer is the server API for Customer service.
 // All implementations must embed UnimplementedCustomerServer
 // for forward compatibility
 type CustomerServer interface {
 	// 获取验证码
 	GetVerifyCode(context.Context, *GetVerifyCodeReq) (*GetVerifyCodeResp, error)
+	// 登录
+	Login(context.Context, *LoginReq) (*LoginResp, error)
 	mustEmbedUnimplementedCustomerServer()
 }
 
@@ -62,6 +76,9 @@ type UnimplementedCustomerServer struct {
 
 func (UnimplementedCustomerServer) GetVerifyCode(context.Context, *GetVerifyCodeReq) (*GetVerifyCodeResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetVerifyCode not implemented")
+}
+func (UnimplementedCustomerServer) Login(context.Context, *LoginReq) (*LoginResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Login not implemented")
 }
 func (UnimplementedCustomerServer) mustEmbedUnimplementedCustomerServer() {}
 
@@ -94,6 +111,24 @@ func _Customer_GetVerifyCode_Handler(srv interface{}, ctx context.Context, dec f
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Customer_Login_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(LoginReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).Login(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_Login_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).Login(ctx, req.(*LoginReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Customer_ServiceDesc is the grpc.ServiceDesc for Customer service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -104,6 +139,10 @@ var Customer_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetVerifyCode",
 			Handler:    _Customer_GetVerifyCode_Handler,
+		},
+		{
+			MethodName: "Login",
+			Handler:    _Customer_Login_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
